--- a/project (1).ipynb
+++ b/project (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c7e8e932-4a00-4fe1-8a45-085fc7f2d7e7",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
     "  # or df.dropna()\n",
     "\n",
     "# Confirm cleaning\n",
-    "print(\"After cleaning:\")\n",
+    "print(\"After cleanning:\")\n",
     "print(df.isnull().sum())\n",
     "print(df.head())\n"
    ]
